fix speed-dial z-index

--- a/html/assets/styles/base.less
+++ b/html/assets/styles/base.less
@@ -60,6 +60,8 @@ md-dialog {
 	border-radius: 2px;
 }
 md-fab-speed-dial {
+	z-index: 1;
+	
 	&.md-fab-speed-dial-bottom-right {
 		position: fixed;
 		bottom: 20px;
